Fix for ml contract
