# backend/docs/swagger.json
@@ -1038,17 +1038,29 @@
         "domain.EventType": {
             "type": "string",
             "enum": [
-                "maintenance",
+                "trip",
+                "refuel",
                 "repair",
-                "fuel",
+                "inspection",
+                "accident",
+                "recall",
+                "warning",
+                "maintenance",
+                "prediction",
                 "diagnostic",
                 "part_replacement",
                 "note"
             ],
             "x-enum-varnames": [
-                "EventTypeMaintenance",
+                "EventTypeTrip",
+                "EventTypeRefuel",
                 "EventTypeRepair",
-                "EventTypeFuel",
+                "EventTypeInspection",
+                "EventTypeAccident",
+                "EventTypeRecall",
+                "EventTypeWarning",
+                "EventTypeMaintenance",
+                "EventTypePrediction",
                 "EventTypeDiagnostic",
                 "EventTypePartReplacement",
                 "EventTypeNote"
@@ -1444,7 +1456,15 @@
                         "trip",
                         "refuel",
                         "repair",
-                        "service"
+                        "inspection",
+                        "accident",
+                        "recall",
+                        "warning",
+                        "maintenance",
+                        "prediction",
+                        "diagnostic",
+                        "part_replacement",
+                        "note"
                     ],
                     "allOf": [
                         {
