# backend/internal/domain/event_types.go
@@ -1,0 +1,16 @@
+package domain
+
+var AllEventTypes = []EventType{
+	EventTypeTrip,
+	EventTypeRefuel,
+	EventTypeRepair,
+	EventTypeInspection,
+	EventTypeAccident,
+	EventTypeRecall,
+	EventTypeWarning,
+	EventTypeMaintenance,
+	EventTypePrediction,
+	EventTypeDiagnostic,
+	EventTypePartReplacement,
+	EventTypeNote,
+}
